# ecfft

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: test.yml
benches/: ecfft.rs  fft.rs
curve/: Dockerfile  index.sage
doc/: book.toml
doc/src/: 1_nutshell.md  SUMMARY.md
src/: classic_fft.rs  common.rs  ecfft.rs  lib.rs  naive.rs  polynomial.rs  test.rs
src/classic_fft/: utils.rs
src/ecfft/: arithmetic.rs  behave.rs  curve.rs  fftree.rs  isogeny.rs  params.rs  utils.rs
