[package]
name = "ecfft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pairing = { git = 'https://github.com/appliedzkp/pairing', package = "pairing_bn256", "tag" = "v0.1.1"}
group = { version = "0.12", default-features = false }
ff = "0.12"
rayon = "1.5.1"
rand = { version = "0.8", default-features = false }
subtle = { version = "2.3", default-features = false }
static_assertions = "1.1.0"
blake2b_simd = { version = "1", default-features = false }

[dev_dependencies]
proptest = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
criterion = "0.3"

[[bench]]
name = "fft"
harness = false
